Fixed horizontal scroll issue on My Work pg

--- a/src/style.css
+++ b/src/style.css
@@ -139,7 +139,8 @@ li {
 
   #role_text {
     font-family: var(--default-text);
-    font-size: 18px;
+    font-size: 16px;
+    margin-right: 5px;
   }
 
   #contact_pg_text {
